[package]
name = "enum-subdomain"
version = "0.0.1"
edition = "2021"
authors = ["lightless"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.0.19", features=["cargo"]}
log = "0.4.17"
log4rs = "1.2.0"
tokio = {version = "1", features = ["fs", "rt", "rt-multi-thread", "macros", "time", "sync", "io-std", "io-util"]}
async-channel = "1.7.1"
itertools = "0.10.2"
async-trait = "0.1.58"
trust-dns-resolver = "0.22.0"
rand = "0.8.5"
reqwest = {version = "0.11.12", features = ["rustls-tls"], default-features = false }
regex = "1.7.0"
